// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TypeaheadItem should render 1`] = `
<div
  className="Item"
>
  <span
    className="Value"
  >
    found
  </span>
</div>
`;

exports[`Component: TypeaheadItem should render help text 1`] = `
<div
  className="Item"
>
  <span
    className="Value"
  >
    found
  </span>
  <span
    className="HelpText"
  >
    I am helping!
  </span>
</div>
`;
